2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Update table of unaddressed interface elements.

	* doc/guile-pg.twerp (Not Included): Add entries for
	`PQdisplayTuples', `PQprintTuples', `PQmblen', `PQenv2encoding'.

2009-06-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Specify Automake 1.11, Libtool 2.2.6.

	* configure.ac (AM_INIT_AUTOMAKE): Specify "1.11".
	(LT_PREREQ): Specify "2.2.6".

2009-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Move table of contents after the title page.

	* doc/guile-pg.twerp: Move @contents; delete @summarycontents.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove support for unused SCM_OUTPORTP.

	* build-aux/guile-pg.m4 (AC_GUILE_PG_FCOMPAT):
	Delete AC_LINK_IFELSE check for `SCM_OUTPORTP'
	and the related `HAVE_SCM_OUTPORTP' AC_DEFINE.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Assume system provides tmpfile(3).

	* configure.in (tmpfile): Delete this AC_CHECK_FUNCS.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Consolidate Guile API specification.

	* configure.in (AH_BOTTOM): Delete.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add infrastructure to more easily tweak GCC warnings for "make all".

	* configure.in: When using GCC, don't modify `CFLAGS';
	instead, set var `AGGRESSIVE_WARNINGS'.  Enable many warnings.
	(AGGRESSIVE_WARNINGS): New AC_SUBST.

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Don't check for `crypt' in libcrypt.

	* build-aux/guile-pg.m4 (PQ_FLAGS): No longer check for func
	`crypt' in libcrypt.  No longer modfiy `PQ_LDFLAGS' accordingly.

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Tighten up "show-platform" a bit.

	* Makefile.am (dist-hook): Also substitute "RECIP".

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop support for PostgreSQL 7.3.x and earlier.

	* build-aux/guile-pg.m4 (PQ_FLAGS): No longer check
	for `PQsetdbLogin' in libpq.  Instead, check for
	`PQprotocolVersion'.  Update error message.